@@ -6,10 +6,8 @@ import com.vaadin.flow.server.VaadinSession;
 import de.atextor.turtle.formatter.FormattingStyle;
 import de.atextor.turtle.formatter.TurtleFormatter;
 import org.apache.jena.riot.RDFDataMgr;
-import org.eclipse.rdf4j.model.BNode;
-import org.eclipse.rdf4j.model.IRI;
-import org.eclipse.rdf4j.model.Model;
-import org.eclipse.rdf4j.model.Statement;
+import org.eclipse.rdf4j.model.*;
+import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
 import org.eclipse.rdf4j.rio.RDFFormat;
 import org.eclipse.rdf4j.rio.Rio;
 import qseevolvingkgwebapp.data.ExtractedShapes;
@@ -66,7 +64,7 @@ public class Utils {
         var firstItem = graphs.stream().findFirst();
 
 
-        if(selectedGraphId != null && !selectedGraphId.equals(0)) {
+        if(selectedGraphId != null) {
             var graphItem = selectItemGraph.getDataProvider().fetch(new Query<>()).filter(g -> g.id.equals(selectedGraphId)).findFirst();
             if(graphItem.isPresent())
                 selectItemGraph.setValue(graphItem.get());
@@ -86,7 +84,7 @@ public class Utils {
         var currentVersionId = (Long) VaadinSession.getCurrent().getAttribute("shapes_currentVersionId");
         var firstItem = versions.stream().findFirst();
 
-        if(currentVersionId != null && !currentVersionId.equals(0)) {
+        if(currentVersionId != null) {
             var graphItem = selectItemVersion.getDataProvider().fetch(new Query<>()).filter(v -> v.id.equals(currentVersionId)).findFirst();
             if(graphItem.isPresent())
                 selectItemVersion.setValue(graphItem.get());
@@ -103,7 +101,13 @@ public class Utils {
     public static String generateTTLFromIRIInModel(IRI iri, Model model) {
         if(usePrettyFormatting) {
             var filteredModel = model.stream().filter(statement -> statement.getSubject().equals(iri)).collect(Collectors.toSet());
+            SimpleValueFactory valueFactory = SimpleValueFactory.getInstance();
+            IRI iriSupport = valueFactory.createIRI("http://shaclshapes.org/support");
+            IRI iriConfidence = valueFactory.createIRI("http://shaclshapes.org/confidence");
+
             var filteredModelWithBlankNodes = addBlankNodesToModel(filteredModel, model);
+            filteredModelWithBlankNodes = filteredModelWithBlankNodes.stream().filter(statement -> !statement.getPredicate().equals(iriSupport)
+                    && !statement.getPredicate().equals(iriConfidence)).collect(Collectors.toSet());
 
             //need to write to file to load as jena model
             var tmpPath = System.getProperty("user.dir")+"\\tmp.ttl";
@@ -149,17 +153,17 @@ public class Utils {
         var blankNodeQueue = filteredModel.stream().filter(statement -> statement.getObject() instanceof BNode).collect(Collectors.toList());
         while(blankNodeQueue.size() != 0) {
             var nextStatement = blankNodeQueue.get(0);
-            var modelToAdd = model.stream().filter(statement -> statement.getSubject().equals(nextStatement.getObject())).collect(Collectors.toList());
+            var modelToAdd = model.stream().filter(statement -> statement.getSubject().equals(nextStatement.getObject())).toList();
             filteredModel.addAll(modelToAdd);
             blankNodeQueue.remove(nextStatement);
-            var tmp = modelToAdd.stream().filter(statement -> statement.getObject() instanceof BNode).collect(Collectors.toList());
+            var tmp = modelToAdd.stream().filter(statement -> statement.getObject() instanceof BNode).toList();
             blankNodeQueue.addAll(tmp);
         }
         return filteredModel;
     }
 
     public static String getComboBoxLabelForExtractedShapes(ExtractedShapes shape) {
-        if(shape.getComboBoxString()== null|| shape.getComboBoxString().isEmpty())
+        if(shape.getComboBoxString().isEmpty())
             shape.generateComboBoxString();
         return shape.getComboBoxString();
     }
